--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
   <artifactId>jboss-ejb3-ext-api</artifactId>
   <name>JBoss EJB 3 External API</name>
 
-  <version>0.1-SNAPSHOT</version>
+  <!-- TODO: we may need to release separately -->
+  <!-- version>0.11.0-SNAPSHOT</version -->
   <description>JBoss EJB 3 API for Bean Providers</description>
   <url>http://labs.jboss.com/jbossejb3/</url>
 
@@ -25,14 +26,6 @@
     <url>http://viewvc.jboss.org/cgi-bin/viewvc.cgi/jbossas/projects/ejb3/trunk/</url>
   </scm>
 
-  <repositories>
-    <repository>
-      <id>java.net</id>
-      <url>https://maven-repository.dev.java.net/repository/</url>
-      <layout>legacy</layout>
-    </repository>
-  </repositories>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -40,10 +33,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>javax.ejb</groupId>
-      <artifactId>ejb-api</artifactId>
-      <scope>provided</scope>
-      <version>3.0</version>
+      <groupId>org.jboss.javaee</groupId>
+      <artifactId>jboss-ejb-api</artifactId>
+      <version>3.0.0.20070913080910</version>
     </dependency>
   </dependencies>
 
