--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,17 @@
 
    <!-- Define Parent -->
    <parent>
+      
+      <groupId>org.jboss</groupId>
+      <artifactId>jboss-parent</artifactId>
+      <version>3</version>
+      
+      <!-- 
       <artifactId>jboss-ejb3</artifactId>
       <groupId>org.jboss.ejb3</groupId>
       <version>0.11.0-SNAPSHOT</version>
       <relativePath>../build/pom.xml</relativePath>
+       -->
    </parent>
 
    <!-- Maven POM Model Version -->
@@ -60,12 +67,14 @@
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <scope>test</scope>
+         <version>4.4</version>
       </dependency>
 
       <!-- JavaEE EJB3 API -->
       <dependency>
          <groupId>org.jboss.javaee</groupId>
          <artifactId>jboss-ejb-api</artifactId>
+         <version>3.0.0</version>
       </dependency>
    </dependencies>
 
