--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,17 @@
 
    <!-- Define Parent -->
    <parent>
+
+      <groupId>org.jboss</groupId>
+      <artifactId>jboss-parent</artifactId>
+      <version>3</version>
+
+      <!-- 
          <artifactId>jboss-ejb3</artifactId>
          <groupId>org.jboss.ejb3</groupId>
          <version>0.11.0-SNAPSHOT</version>
          <relativePath>../build/pom.xml</relativePath>
+         -->
    </parent>
 
    <!-- Maven POM Model Version -->
