--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,16 @@
    <!-- Artifact Information -->
    <groupId>org.jboss.ejb3</groupId>
    <artifactId>jboss-ejb3-ext-api</artifactId>
-   <version>0.1.1.Beta1</version>
+   <version>0.1.2-SNAPSHOT</version>
    <name>JBoss EJB 3 External API</name>
    <description>JBoss EJB 3 API for Bean Providers</description>
    <url>http://labs.jboss.com/jbossejb3/</url>
 
    <!-- SCM -->
    <scm>
-      <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/ejb33/tags/jboss-ejb3-ext-api-0.1.1.Beta1</connection>
-      <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb3/tags/jboss-ejb3-ext-api-0.1.1.Beta1</developerConnection>
-      <url>http://viewvc.jboss.org/cgi-bin/viewvc.cgi/jbossas/projects/ejb33/tags/jboss-ejb3-ext-api-0.1.1.Beta1</url>
+      <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/ejb3/trunk/</connection>
+      <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb/trunk/</developerConnection>
+      <url>http://viewvc.jboss.org/cgi-bin/viewvc.cgi/jbossas/projects/ejb3/trunk/</url>
    </scm>
 
 
