--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
    <!-- Define Parent -->
    <parent>
@@ -12,7 +14,7 @@
          <groupId>org.jboss.ejb3</groupId>
          <version>0.11.0-SNAPSHOT</version>
          <relativePath>../build/pom.xml</relativePath>
-         -->
+      -->
    </parent>
 
    <!-- Maven POM Model Version -->
@@ -28,9 +30,15 @@
 
    <!-- SCM -->
    <scm>
-      <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/ejb3/trunk/</connection>
-      <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb/trunk/</developerConnection>
-      <url>http://viewvc.jboss.org/cgi-bin/viewvc.cgi/jbossas/projects/ejb3/trunk/</url>
+      <connection>
+         scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/ejb3/trunk/
+      </connection>
+      <developerConnection>
+         scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb/trunk/
+      </developerConnection>
+      <url>
+         http://viewvc.jboss.org/cgi-bin/viewvc.cgi/jbossas/projects/ejb3/trunk/
+      </url>
    </scm>
 
 
@@ -47,6 +55,28 @@
                </tagBase>
             </configuration>
          </plugin>
+
+         <!-- JBoss Deploy Plugin -->
+         <plugin>
+            <groupId>org.jboss.maven.plugins</groupId>
+            <artifactId>maven-jboss-deploy-plugin</artifactId>
+            <version>1.4</version>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>jboss-deploy</goal>
+                  </goals>
+               </execution>
+            </executions>
+            <configuration>
+               <jbossDeployRoot>
+                  ${jboss.repository.root}
+               </jbossDeployRoot>
+               <groupId>jboss</groupId>
+            </configuration>
+            <inherited>true</inherited>
+         </plugin>
+
       </plugins>
    </build>
 
