JBAS-4990: using new jboss-deploy-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
          <plugin>
             <groupId>org.jboss.maven.plugins</groupId>
             <artifactId>maven-jboss-deploy-plugin</artifactId>
-            <version>1.4</version>
+            <version>1.5</version>
             <executions>
                <execution>
                   <goals>
@@ -64,6 +64,7 @@
                <jbossDeployRoot>
                   ${jboss.repository.root}
                </jbossDeployRoot>
+               <removeArtifactVersion>true</removeArtifactVersion>
                <groupId>jboss</groupId>
             </configuration>
             <inherited>true</inherited>
