[maven-release-plugin] prepare branch 0.1.2

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
    <!-- Define Parent -->
    <parent>
@@ -23,22 +21,16 @@
    <!-- Artifact Information -->
    <groupId>org.jboss.ejb3</groupId>
    <artifactId>jboss-ejb3-ext-api</artifactId>
-   <version>0.1.2-SNAPSHOT</version>
+   <version>0.1.2</version>
    <name>JBoss EJB 3 External API</name>
    <description>JBoss EJB 3 API for Bean Providers</description>
    <url>http://labs.jboss.com/jbossejb3/</url>
 
    <!-- SCM -->
    <scm>
-      <connection>
-         scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/ejb3/trunk/
-      </connection>
-      <developerConnection>
-         scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb/trunk/
-      </developerConnection>
-      <url>
-         http://viewvc.jboss.org/cgi-bin/viewvc.cgi/jbossas/projects/ejb3/trunk/
-      </url>
+      <connection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb3/tags/0.1.2</connection>
+      <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb3/tags/0.1.2</developerConnection>
+      <url>https://svn.jboss.org/repos/jbossas/projects/ejb3/tags/0.1.2</url>
    </scm>
 
    <!-- 
