Added "branchName" configuration to Maven Release Plugin in POM

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
                <tagBase>
                   https://svn.jboss.org/repos/jbossas/projects/ejb3/tags
                </tagBase>
+               <branchName>ejb3-ext-api</branchName>
             </configuration>
          </plugin>
 
