Set back to snapshot

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
    <!-- Artifact Information -->
    <groupId>org.jboss.ejb3</groupId>
    <artifactId>jboss-ejb3-ext-api</artifactId>
-   <version>0.1.2</version>
+   <version>0.1.2-SNAPSHOT</version>
    <name>JBoss EJB 3 External API</name>
    <description>JBoss EJB 3 API for Bean Providers</description>
    <url>http://labs.jboss.com/jbossejb3/</url>
