--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,16 @@
    <!-- Artifact Information -->
    <groupId>org.jboss.ejb3</groupId>
    <artifactId>jboss-ejb3-ext-api</artifactId>
-   <version>0.1.2-SNAPSHOT</version>
+   <version>0.1.3-SNAPSHOT</version>
    <name>JBoss EJB 3 External API</name>
    <description>JBoss EJB 3 API for Bean Providers</description>
    <url>http://labs.jboss.com/jbossejb3/</url>
 
    <!-- SCM -->
    <scm>
-      <connection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb3/branches/ejb3-ext-api-0.1.2</connection>
-      <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb3/branches/ejb3-ext-api-0.1.2</developerConnection>
-      <url>https://svn.jboss.org/repos/jbossas/projects/ejb3/branches/ejb3-ext-api-0.1.2</url>
+      <connection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb3/trunk</connection>
+      <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb3/trunk</developerConnection>
+      <url>https://svn.jboss.org/repos/jbossas/projects/ejb3/trunk</url>
    </scm>
 
    <!-- 
