--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <!-- Define Parent -->
   <parent>
-    <artifactId>jboss-ejb3</artifactId>
+    <artifactId>jboss-ejb3-build</artifactId>
     <groupId>org.jboss.ejb3</groupId>
     <version>0.12.0-SNAPSHOT</version>
     <relativePath>../build/pom.xml</relativePath>
