--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <!-- Artifact Information -->
   <groupId>org.jboss.ejb3</groupId>
   <artifactId>jboss-ejb3-ext-api</artifactId>
-  <version>0.3-SNAPSHOT</version>
+  <version>0.3</version>
   <name>JBoss EJB 3.0 External API</name>
   <description>JBoss EJB 3.0 API for Bean Providers</description>
   <url>http://labs.jboss.com/jbossejb3/</url>
@@ -43,4 +43,10 @@
     </dependency>
 
   </dependencies>
+
+  <scm>
+    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/ejb3/tags/jboss-ejb3-ext-api-0.3</connection>
+    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/ejb3/tags/jboss-ejb3-ext-api-0.3</developerConnection>
+    <url>http://anonsvn.jboss.org/repos/jbossas/projects/ejb3/tags/jboss-ejb3-ext-api-0.3</url>
+  </scm>
 </project>
