--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
    <groupId>org.jboss.ejb3</groupId>
    <artifactId>jboss-ejb3-ext-api</artifactId>
-   <version>2.1.0-SNAPSHOT</version>
+   <version>2.1.0</version>
    <name>JBoss EJB 3 Extension API</name>
    <description>JBoss EJB 3 API for Bean Providers</description>
    <url>http://www.jboss.org/ejb3/</url>
